Bug #17929 DD: "delete from" is run in memory order
Submitted: 5 Mar 2006 10:50 Modified: 11 Oct 2006 10:33
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: ClusterDD Severity:S3 (Non-critical)
Version:5.1 OS:
Assigned to: Jonas Oreland Target Version:

[5 Mar 2006 10:50] Jonas Oreland
Description:
if doing delete from on a disk table.
ha_ndbcluster.cc currently sets up a scan in ACC order.
this yields extremly poor performance as it results in lots of random io.

i tried deleting 10k rows in acc vs disk order then time was 3minutes vs. 10s

How to repeat:
 

Suggested fix:
[21 May 2006 17:22] Jonas Oreland
Needs to be fixed before GA
[5 Oct 2006 12:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13107

ChangeSet@1.2301, 2006-10-05 14:25:18+02:00, jonas@perch.ndb.mysql.com +7 -0
  ndb - bug#17929
    guess which scan type to use in handler
[10 Oct 2006 18:26] Jonas Oreland
pushed into 5.1.12
[11 Oct 2006 10:33] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.12 changelog.
[20 Oct 2006 12:18] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/14051

ChangeSet@1.2302, 2006-10-20 14:18:28+02:00, jonas@perch.ndb.mysql.com +7 -0
  ndb - bug#17929
      guess which scan type to use in handler