ndb - bug#17929   guess which scan type to use in handler

sql/ha_ndbcluster.cc:
  Add guessing of scan type when starting full-table-scan
storage/ndb/include/ndbapi/NdbDictionary.hpp:
  Add methods to check properties of a bitmap of columns
storage/ndb/include/ndbapi/NdbScanOperation.hpp:
  Add DiskScanFlag
storage/ndb/src/ndbapi/NdbDictionaryImpl.cpp:
  Add aggregate of #disk columns
storage/ndb/src/ndbapi/NdbDictionaryImpl.hpp:
  Add #disk columns
storage/ndb/src/ndbapi/NdbScanOperation.cpp:
  Add disk scan flag
storage/ndb/tools/delete_all.cpp:
  Add tupscan/diskscan to delete_all